workloads/medium-place/caddy/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: caddy
  namespace: medium-place
  labels:
    app.kubernetes.io/name: caddy
    app.kubernetes.io/part-of: caddy
    app.kubernetes.io/version: 2.5.2

spec:
  selector:
    app.kubernetes.io/name: caddy
    app.kubernetes.io/part-of: caddy

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
