workloads/medium-place/caddy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: caddy
  namespace: medium-place
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: true
  labels:
    app.kubernetes.io/part-of: caddy

spec:
  ingressClassName: public

  tls:
    - hosts:
        - medium.place
      secretName: medium.place-tls

  rules:
    - host: medium.place
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: caddy
                port:
                  name: http
